deployments/data-retrieve/deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: release-name-data-retrieve
  labels:
    helm.sh/chart: data-retrieve-0.1.0
    app.kubernetes.io/name: data-retrieve
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "1.16.0"
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: data-retrieve
    app.kubernetes.io/instance: release-name
---
# Source: data-retrieve/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: release-name-data-retrieve
  labels:
    helm.sh/chart: data-retrieve-0.1.0
    app.kubernetes.io/name: data-retrieve
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "1.16.0"
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: data-retrieve
      app.kubernetes.io/instance: release-name
  template:
    metadata:
      labels:
        app.kubernetes.io/name: data-retrieve
        app.kubernetes.io/instance: release-name
    spec:
      imagePullSecrets:
        - dockerhub
      serviceAccountName: default
      securityContext:
        {}
      containers:
        - name: data-retrieve
          securityContext:
            {}
          image: "pgtgs/data-retrieve:latest"
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /
              port: http
          readinessProbe:
            httpGet:
              path: /
              port: http
          resources:
            limits:
              cpu: 100m
              memory: 128Mi
            requests:
              cpu: 100m
              memory: 128Mi
---
# Source: data-retrieve/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: release-name-data-retrieve
  labels:
    helm.sh/chart: data-retrieve-0.1.0
    app.kubernetes.io/name: data-retrieve
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "1.16.0"
    app.kubernetes.io/managed-by: Helm
spec:
  rules:
    - host: "data-retrieve.rpgp.cc"
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: release-name-data-retrieve
                port:
                  number: 80
